[metadata]
name = graph-envs
version = 0.0.65
author = Teshnizi
author_email = teshnizi@stanford.edu
description = Graph Reinforcement Learning Environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teshnizi/GraphEnvs
project_urls = 
	Bug Tracker = https://github.com/teshnizi/GraphEnvs/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6



dependencies = 
    gymnasium>=0.27.1,
    torch>=1.12,
    torch-geometric,
    networkx,

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

