[metadata]
name = graph-envs
version = 0.0.41
author = Teshnizi
author_email = teshnizi@stanford.edu
description = A library for training and benchmarking RL agents on graphs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teshnizi/GraphEnvs
project_urls = 
	Bug Tracker = https://github.com/teshnizi/GraphEnvs/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
# set package_dir to none
package_dir = 
	=
packages = find:
python_requires = >=3.6

dependencies = 
    gymnasium>=0.27.1,
    torch>=1.12,
    torch-geometric,
    networkx,
	numpy >=1.21.0,

[options.packages.find]
where = .
exclude = 
    tests


[egg_info]
tag_build = 
tag_date = 0
egg_base = .
